--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@ li a:visited {
     font-weight: bold;
     color: #f9faf8;
     margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 .left-side .text {
